--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   }
 
-.Root-Container:after {
+/*.Root-Container:after {
   animation: grain 8s steps(10) infinite;
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/paper-pattern.png);
   content: "";
@@ -29,7 +29,7 @@
   70% { transform:translate(0%, 15%) }
   80% { transform:translate(3%, 35%) }
   90% { transform:translate(-10%, 10%) }
-}
+}*/
 
 
 .Bsd{
@@ -56,11 +56,12 @@
 .Time {
     display: flex;
     flex: 1;
-    justify-content: flex-start;
+    justify-content: space-between;
     color: cadetblue;
     font-size: 50px;
     margin-left: 15px;
-    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-bottom: 15px;
     
 }
 
@@ -83,6 +84,11 @@
     justify-content: CENTER;
     flex: 1;
     margin-top: 55px;
+}
+.Button-Container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 /*.Hr23 .yud {
