--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .Root-Container {
-  flex: 1;
+  flex: 9;
   display: flex;
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/northernlights.jpg);
   height: 100vh;
@@ -76,10 +76,9 @@
   display: flex;
   flex: 8;
   justify-content: flex-end;
-  align-content: flex-end;
+  align-items: flex-end;
 }
 .Name-Container .Name{
-    display: flex;
     flex-direction: row;
     justify-content: CENTER;
     flex: 1;
